# completion.rs

./: Cargo.toml  README.md  build.rs  check.sh
.config/: allow.dic  spellcheck.toml
core/: Cargo.toml  README.md
core/src/: lib.rs
io/: Cargo.toml  README.md
io/src/: buf_read.rs  lib.rs  read.rs  seek.rs  util.rs  write.rs
io/src/read/: buf.rs  bufs.rs  co_mut.rs  default_read_vectored.rs  maybe_uninit_io_slice_mut.rs
io/src/sys/: mod.rs  unix.rs  unsupported.rs  wasi.rs  windows.rs
macro/: Cargo.toml
macro/src/: block.rs  function.rs  lib.rs  stream.rs  transform_async.rs
src/: lib.rs
src/future/: block_on.rs  mod.rs  now_or_never.rs  zip.rs
src/future/join/: mod.rs
src/future/join/all/: base.rs  mod.rs  race.rs  race_ok.rs  try_zip.rs  zip.rs
src/future/join/tuple/: base.rs  mod.rs  race.rs  race_ok.rs  try_zip.rs  zip.rs
src/io/: copy.rs  mod.rs
src/io/buf_read/: lines.rs  mod.rs  read_line.rs  read_until.rs  split.rs  take_until.rs
src/io/buffered/: buf_reader.rs  buf_writer.rs  mod.rs
src/io/read/: chain.rs  mod.rs  read_exact.rs  read_to_end.rs  read_to_string.rs  take.rs
src/io/seek/: mod.rs  stream_position.rs
src/io/write/: mod.rs  write_all.rs
src/macros/: future.rs  mod.rs  stream.rs  try.rs
src/macros/future/: tests.rs
src/macros/stream/: tests.rs
src/stream/: adapters.rs  from_completion_stream.rs  futures.rs  mod.rs  unfold.rs
src/stream/adapters/: chain.rs  cloned.rs  cycle.rs  enumerate.rs  filter.rs  flatten.rs  fuse.rs  inspect.rs  map.rs  mod.rs  peekable.rs  skip_take.rs  skip_take_while.rs  step_by.rs
src/stream/futures/: all_any.rs  collect.rs  count.rs  find.rs  fold.rs  for_each.rs  last.rs  max_min.rs  mod.rs  next.rs  nth.rs
tests/: completion_future_macro.rs  completion_stream_macro.rs  hygiene.rs
util/: Cargo.toml
util/src/: lib.rs  macros.rs
util/src/future/: block_on.rs  mod.rs
util/src/macros/: future.rs  stream.rs
util/src/stream/: adapters.rs  from_completion_stream.rs  futures.rs  mod.rs  unfold.rs
util/tests/: completion_future_macro.rs  completion_stream_macro.rs  hygiene.rs
