[package]
name = "completion"
version = "0.1.0"
authors = ["KaiJewson <kai.jewson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["core", "macro", "io"]

[dependencies]
completion-core = { path = "core", version = "0.1.0" }
completion-io = { path = "io", version = "0.1.0", optional = true }
completion-macro = { path = "macro", version = "0.1.0", optional = true }

futures-core = "0.3.12"
pin-project-lite = "0.2.4"

aliasable = { version = "0.1.3", optional = true }
memchr = { version = "2.3.4", optional = true }

[dev-dependencies]
futures-lite = "1.11.3"

[features]
default = ["std", "macro"]
std = ["completion-macro/std", "completion-io", "memchr", "alloc"]
alloc = ["completion-macro/alloc", "aliasable"]
macro = ["completion-macro"]
