[package]
name = "completion"
version = "0.2.1"
authors = ["KaiJewson <kai.jewson@gmail.com>"]
edition = "2018"
description = "Utilities for writing completion-based asynchronous code"
readme = "README.md"
repository = "https://github.com/KaiJewson/completion"
license = "MIT OR Apache-2.0"
keywords = ["completion", "future", "async", "runtocompletion"]
categories = ["asynchronous", "no-std"]

[workspace]
members = ["core", "macro", "io"]

[dependencies]
completion-core = { path = "core", version = "0.2.0" }
completion-io = { path = "io", version = "0.2.0", optional = true }
completion-macro = { path = "macro", version = "=0.2.0", optional = true }

atomic-waker = "1.0.0"
concurrent-queue = "1.2.2"
futures-core = "0.3.12"
pin-project-lite = "0.2.4"

aliasable = { version = "0.1.3", optional = true }
memchr = { version = "2.3.4", optional = true }

[dev-dependencies]
futures-lite = "1.11.3"

[features]
default = ["std", "macro"]
std = ["completion-io", "memchr", "alloc"]
alloc = ["aliasable"]
macro = ["completion-macro"]
