[package]
name = "completion-core"
version = "0.2.0"
authors = ["KaiJewson <kai.jewson@gmail.com>"]
edition = "2018"
description = "Core traits and types for completion-based asynchronous programming"
readme = "README.md"
repository = "https://github.com/KaiJewson/completion"
license = "MIT OR Apache-2.0"
keywords = ["completion", "future", "async", "runtocompletion"]
categories = ["asynchronous", "no-std"]

[dependencies]
futures-core = { version = "0.3.12", default-features = false }

[features]
default = ["std"]
std = ["alloc", "futures-core/std"]
alloc = ["futures-core/alloc"]
