[package]
name = "completion-io"
version = "0.1.0"
authors = ["KaiJewson <kai.jewson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
completion-core = { path = "../core", version = "0.1.0" }

[dev-dependencies]
futures-lite = "1.11.3"
