[package]
name = "completion-io"
version = "0.2.0"
authors = ["KaiJewson <kai.jewson@gmail.com>"]
edition = "2018"
description = "Core traits and types for asynchronous completion-based I/O"
readme = "README.md"
repository = "https://github.com/KaiJewson/completion"
license = "MIT OR Apache-2.0"
keywords = ["completion", "future", "async", "runtocompletion", "io"]
categories = ["asynchronous", "no-std"]

[dependencies]
completion-core = { path = "../core", version = "0.2.0" }
futures-core = "0.3.15"
cfg-if = "1.0.0"
pinned-aliasable = "0.1.0"
pin-project-lite = "0.2.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2.94"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["ws2def", "ntdef"] }

[target.wasm32-wasi.dependencies]
wasi = "0.10.2"

[dev-dependencies]
futures-lite = "1.11.3"
