[package]
name = "completion-macro"
version = "0.1.0"
authors = ["KaiJewson <kai.jewson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.55", default-features = false, features = ["full", "proc-macro", "parsing", "printing", "visit-mut"] }
quote = "1.0.8"
proc-macro2 = "1.0.24"
