[package]
name = "completion-macro"
version = "0.1.0"
authors = ["KaiJewson <kai.jewson@gmail.com>"]
edition = "2018"
description = "Macros for `completion`. Do not use."
repository = "https://github.com/KaiJewson/completion"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.56", default-features = false, features = ["full", "proc-macro", "parsing", "printing", "visit-mut"] }
quote = "1.0.8"
proc-macro2 = "1.0.24"
