[package]
name = "completion-macro"
version = "0.2.0"
authors = ["KaiJewson <kai.jewson@gmail.com>"]
edition = "2018"
description = "Macros for `completion`. Do not use."
repository = "https://github.com/KaiJewson/completion"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.60", default-features = false, features = ["full", "parsing", "printing", "proc-macro", "visit-mut"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
