[package]
name = "completion-util"
version = "0.1.0"
authors = ["KaiJewson <kai.jewson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
completion-core = { path = "../core", version = "0.1.0" }
completion-macro = { path = "../macro", version = "0.1.0", optional = true }
futures-core = "0.3.8"
pin-project-lite = "0.2.0"

[dev-dependencies]
futures-lite = "1.11.3"

[features]
default = ["std", "macro"]
std = ["completion-macro/std", "alloc"]
alloc = ["completion-macro/alloc"]
macro = ["completion-macro"]
